deploy/k8s/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__-api
  namespace: custom-apps
  labels:
    app.kubernetes.io/name: kust
    app.kubernetes.io/instance: __APP_NAME__
    app.kubernetes.io/component: api
spec:
  selector:
    app.kubernetes.io/instance: __APP_NAME__
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8080
      targetPort: http
