deploy/k8s/templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__
  namespace: custom-apps
  labels:
    app.kubernetes.io/name: kust
    app.kubernetes.io/instance: __APP_NAME__
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/instance: __APP_NAME__
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
