deploy/k8s/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: __APP_NAME__
  namespace: custom-apps
  labels:
    app.kubernetes.io/name: kust
    app.kubernetes.io/instance: __APP_NAME__
spec:
  parentRefs:
    - name: k8s-gateway
      namespace: traefik-system
      sectionName: web
  hostnames:
    - k8s.1oa.com.cn
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: __BASE_PATH__
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Prefix
                value: __BASE_PATH__
      backendRefs:
        - name: __APP_NAME__
          port: 80
